add portal scene

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --text-dark: #0F1010;
+  --blue-dark: #0F084B;
+  --green-highlight: #50FFB1;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,7 +20,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: var(--text-dark);
   background: linear-gradient(
       to bottom,
       transparent,
@@ -30,3 +33,4 @@ body {
   color: black;
   font-size: 2rem;
 }
+
